# archon

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  render.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-api.yml  ci-web.yml  ci.yml  publish.yml
archon/: __init__.py  cli.py  interviewer.py  plan_registry.py  session.py  synthesizer.py
archon/generators/: __init__.py  architecture_md.py  base.py  decisions_md.py  roadmap_md.py  shims.py  spec_md.py
archon/llm/: __init__.py  base.py  claude.py  registry.py
archon/models/: __init__.py  enums.py  interview.py  project.py  spec.py
archon/prompts/: __init__.py  interviewer.py  synthesizer.py
archon/templates/: AGENTS.md.j2  ARCHITECTURE.md.j2  CLAUDE.md.j2  DECISIONS.md.j2  ROADMAP.md.j2  SPEC.md.j2
tests/: conftest.py  test_cli.py  test_generators.py  test_models.py  test_plan_registry.py
tests/fixtures/: sample_session.json
