[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archon"
version = "0.1.0"
description = "AI-powered project architecture specification generator for agentic development workflows"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Archon Contributors" }]
keywords = ["architecture", "ai", "agents", "cli", "specification", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "click>=8.1",
    "rich>=13.0",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "syrupy>=4.0",
    "httpx>=0.27",        # for mocking anthropic HTTP calls
    "ruff>=0.4",          # linting
    "hatch>=1.12",        # build tool (for local wheel builds)
]

[project.scripts]
archon = "archon.cli:main"

[project.urls]
Homepage = "https://github.com/archon-ai/archon"
Repository = "https://github.com/archon-ai/archon"
Issues = "https://github.com/archon-ai/archon/issues"

[tool.hatch.build.targets.wheel]
packages = ["archon"]
# Include Jinja2 templates that live inside the package directory
include = ["archon/templates/*.j2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
